--- a/lesson02/activity/css/_components.content.scss
+++ b/lesson02/activity/css/_components.content.scss
@@ -13,5 +13,38 @@ html {
 }
 
 h1 {
-    color: $red;  
+    color: $red;
+}
+
+.static-block{
+
+  &__title {
+    margin: 4rem 0 0;
+    font-size: 1.5rem;
+    font-family: $font;
+    font-weight: 400;
+  }
+  &__copy {
+    margin-bottom: 1rem;
+    font-size: 1rem;
+    font-family: $font;
+    color: $blue;
+  }
+  &__img {
+    display: block;
+    max-width: 100%;
+    margin: auto;
+  }
+  &__content {
+    border-bottom: 1px solid $white;
+    margin: 2rem auto;
+  }
+
+  &:only-of-type &__content {
+  	border: none;
+  }
+  &:last-of-type &__content {
+  	border: none;
+  }
+
 }
