--- a/lesson02/activity/css/_settings.variables.scss
+++ b/lesson02/activity/css/_settings.variables.scss
@@ -3,3 +3,6 @@ $gray: #f6f5f6;
 $black: #000000;
 $purple: #6e27c5;
 $blue: #150f96;
+$red: red;
+$white: #f5f5f5;
+$font: arial, helvetica, sans-serif;
